--- a/html/index.html
+++ b/html/index.html
@@ -83,10 +83,9 @@
             <option value="sevilla">Sevilla</option>
             <option value="lugo"> Lugo</option>
         </select>
+        <button type="submit">Enviar</button><br>
     </form>
-    <button type="submit">Enviar
-
-    </button><br>
+    
     <textarea>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit aut suscipit est pariatur illo? Dolore optio libero consectetur qui quidem repudiandae, repellat nobis veritatis, quasi, harum inventore quisquam. Veniam, quaerat!
 </textarea><br>
