boton de enviar

--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
         <tr>
             <td>TD11</td>
             <td colspan="2">TD12</td>
-           
+
         </tr>
 
         <tr>
@@ -34,7 +34,7 @@
             <td>TD22</td>
             <td>TD23</td>
         <tr>
-            
+
             <td>TD32</td>
             <td>TD33</td>
         </tr>
@@ -59,7 +59,8 @@
     <p>
         Formulario: <br>
         Nombre y Apellidos <input type="text" name="Nombre" placeholder="Escriba nombre y apellidos"> <br><br>
-        DNI <input type="text" name="Dni" placeholder="Su DNI o documento de identidad" pattern="[0-9]{8}{A-Z}"> <br><br>
+        DNI <input type="text" name="Dni" placeholder="Su DNI o documento de identidad" pattern="[0-9]{8}{A-Z}">
+        <br><br>
         Edad <input type="number" name="Edad" pattern="[0-100]"><br><br>
         Fecha de nacimiento <input type="date" name="Fecha de nacimiento" placeholder="Su edad"><br><br>
         Futboll<input type="checkbox" name="Futboll"><br>
@@ -67,7 +68,7 @@
         Rugby<input type="checkbox" name="Rugby"><br>
         Natación<input type="checkbox" name="Natación"><br>
         Atletismo<input type="checkbox" name="Atletismo"><br>
-<br><br>
+        <br><br>
         Pais: <br>
         España<input type="radio" name="origen" id=""><br>
         Alemania<input type="radio" name="origen" id=""><br>
@@ -80,8 +81,10 @@
             <option value="08"> Barcelona</option>
             <option value="06"> Badajoz</option>
             <option value="100">Sevilla</option>
-            <br><br>
-</p>
+        </select>
+        <br><br>
+        <button type="submit">Enviar</button>
+    </p>
 </body>
 
 </html>
