--- a/html/index.html
+++ b/html/index.html
@@ -56,7 +56,7 @@
         DNI:<input type="text" name="dni" pattern="[0-9]{8}[A-Z]{1}" size="9"><br>
         Edad:<input type="number" name="edad"><br>
         Fecha Nacimiento:<input type="date" name="Fecha"><br>
-    </form><br><br><br>
+    <br><br><br>
     SELECCIONA DEPORTES: <br>
     Natación <input name="natacion" type="checkbox"><br>
     Ciclismo <input name="ciclismo" type="checkbox"><br>
@@ -83,6 +83,7 @@
     </select>
     <br><br><br>
     <button type="submit">ENVIAR</button><br>
+</form>
     <textarea cols="30" rows="10">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore accusamus magnam optio quaerat dicta, suscipit molestias eum minima nemo provident iure, nobis quo maxime doloribus quae quibusdam ullam et illum!
     </textarea>
