--- a/html/index.html
+++ b/html/index.html
@@ -82,7 +82,7 @@
             <option value="barcelona">Barcelona</option>
             <option value="sevilla">Sevilla</option>
             <option value="lugo"> Lugo</option>
-        </select>
+        </select><br>
         <button type="submit">Enviar</button><br>
     </form>
     
