--- a/html/index.html
+++ b/html/index.html
@@ -83,7 +83,7 @@
         </select>
         <br><br><br>
         <button type="submit">ENVIAR</button><br>
-    </form>
+    </form><br><br>
     <textarea cols="30" rows="10">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore accusamus magnam optio quaerat dicta, suscipit molestias eum minima nemo provident iure, nobis quo maxime doloribus quae quibusdam ullam et illum!
     </textarea>
