--- a/html/profe.html
+++ b/html/profe.html
@@ -19,7 +19,7 @@
         totam,
         consectetur sapiente quo pariatur ad. Odio consequuntur praesentium maiores vitae ut placeat quaerat.</p>
 
-    <table border="2" align="center">
+    <table border="4" rules="all" heigth="180" width="460" frame="box" align="center">
 
         <tr>
             <td>hola</td>
@@ -64,51 +64,57 @@
         Nombre :<input type="text"><br>
         Edad : <input type="number" min="18" max="65"><br>
         Fecha de Nacimiento: <input type="date"><br>
-        DNI : <input type="number" value="525658M" pattern="[0-9]{8}[A-Z]"><br>
+        DNI : <input type="texto" name="DNI"><br>
+
+
+        <br><br>
+        lista de deporte: <br>
+        futbol: <input type="checkbox" name="futbol"><br>
+        basquet:<input type="checkbox" name="basquet"><br>
+        natacion: <input type="checkbox" name="natacion"><br>
+        voley:<input type="checkbox" name="voley"><br>
+        esgrima:<input type="checkbox" name="esgrima"><br>
+        <br>
+        <br>
+        seleccione población:
+
+        <select name="poblacion"> <br>
+            <option value="Madrid">Madrid</option><br>
+            <option value="Moscu">Moscu</option><br>
+            <option value="Roma">Roma</option><br>
+            <option value="Paris">Paris</option><br>
+            <option value="Lima">Lima</option><br>
+
+        </select>
+        <br>
+        Nacionalidad:
+
+        peruana: <input type="radio" name="origen" value="peruana">
+        española: <input type="radio" name="origen" value="española">
+        rusa: <input type="radio" name="origen" value="rusa">
+        Italiana: <input type="radio" name="origen" value="italiana">
+        portuguesa: <input type="radio" name="origen" value="portuguesa">
+        <br>
+        <br>
+        sexo:
+        <br><br>
+        Hombre: <input type="radio" value="Hombre"><br>
+        Mujer: <input type="radio" value="Mujer"><br>
+        <br>
+        <br>
+
+        <button type="submit">enviar</button>
+        <br> <br> <br>
     </form>
-
-    <br><br>
-    lista de deporte: <br>
-    futbol: <input type="checkbox" name="futbol"><br>
-    basquet:<input type="checkbox" name="basquet"><br>
-    natacion: <input type="checkbox" name="natacion"><br>
-    voley:<input type="checkbox" name="voley"><br>
-    esgrima:<input type="checkbox" name="esgrima"><br>
-    <br>
-    <br>
-    seleccione población:
-
-    <select name="poblacion"> <br>
-        <option value="Madrid">Madrid</option><br>
-        <option value="Moscu">Moscu</option><br>
-        <option value="Roma">Roma</option><br>
-        <option value="Paris">Paris</option><br>
-        <option value="Lima">Lima</option><br>
-
-    </select>
-
-    <br>
-    <br>
-
     descripcion:<textarea name="radio">
-   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae corrupti sint provident accusamus unde? Obcaecati reiciendis aperiam eligendi, minima magni, nulla asperiores blanditiis dicta nobis enim nemo, ad sapiente vitae! 
+
+        <br>
+   
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae corrupti sint provident accusamus unde? Obcaecati reiciendis aperiam eligendi, minima magni, nulla asperiores blanditiis dicta nobis enim nemo, ad sapiente vitae! 
 </textarea>
     <br>
     <br>
-    <br>
-    Nacionalidad:
 
-    peruana: <input type="radio" value="peruana">
-    española: <input type="radio" value="española">
-    rusa: <input type="radio" value="rusa">
-    Italiana: <input type="radio" value="italiana">
-    portuguesa: <input type="radio" value="portuguesa">
-<br>
-<br>
-    sexo:
-<br><br>
-    Hombre: <input type="radio" value="Hombre"><br>
-    Mujer: <input type="radio" value="Mujer"><br>
 
 
 </body>
