--- a/html/index.html
+++ b/html/index.html
@@ -57,33 +57,35 @@
     </p>
     <br><br>
     <p>
-        Formulario: <br>
-        Nombre y Apellidos <input type="text" name="Nombre" placeholder="Escriba nombre y apellidos"> <br><br>
-        DNI <input type="text" name="Dni" placeholder="Su DNI o documento de identidad" pattern="[0-9]{8}{A-Z}">
-        <br><br>
-        Edad <input type="number" name="Edad" pattern="[0-100]"><br><br>
-        Fecha de nacimiento <input type="date" name="Fecha de nacimiento" placeholder="Su edad"><br><br>
-        Futboll<input type="checkbox" name="Futboll"><br>
-        Baloncesto<input type="checkbox" name="Baloncesto"><br>
-        Rugby<input type="checkbox" name="Rugby"><br>
-        Natación<input type="checkbox" name="Natación"><br>
-        Atletismo<input type="checkbox" name="Atletismo"><br>
-        <br><br>
-        Pais: <br>
-        España<input type="radio" name="origen" id=""><br>
-        Alemania<input type="radio" name="origen" id=""><br>
-        Rusia<input type="radio" name="origen" id=""><br>
-        Italia<input type="radio" name="origen" id=""><br><br>
+    <form action="formaction">
+    Formulario: <br>
+    Nombre y Apellidos <input type="text" name="Nombre" placeholder="Escriba nombre y apellidos"> <br><br>
+    DNI <input type="text" name="Dni" placeholder="Su DNI o documento de identidad" pattern="[0-9]{8}{A-Z}">
+    <br><br>
+    Edad <input type="number" name="Edad" pattern="[0-100]"><br><br>
+    Fecha de nacimiento <input type="date" name="Fecha de nacimiento" placeholder="Su edad"><br><br>
+    Futboll<input type="checkbox" name="Futboll"><br>
+    Baloncesto<input type="checkbox" name="Baloncesto"><br>
+    Rugby<input type="checkbox" name="Rugby"><br>
+    Natación<input type="checkbox" name="Natación"><br>
+    Atletismo<input type="checkbox" name="Atletismo"><br>
+    <br><br>
+    Pais: <br>
+    España<input type="radio" name="origen" id=""><br>
+    Alemania<input type="radio" name="origen" id=""><br>
+    Rusia<input type="radio" name="origen" id=""><br>
+    Italia<input type="radio" name="origen" id=""><br><br>
 
-        selecciona poblacion: <select name="poblacion">
-            <option value="0"> Seleccione población</option>
-            <option value="28"> Madrid</option>
-            <option value="08"> Barcelona</option>
-            <option value="06"> Badajoz</option>
-            <option value="100">Sevilla</option>
-        </select>
-        <br><br>
-        <button type="submit">Enviar</button>
+    selecciona poblacion: <select name="poblacion">
+        <option value="0"> Seleccione población</option>
+        <option value="28"> Madrid</option>
+        <option value="08"> Barcelona</option>
+        <option value="06"> Badajoz</option>
+        <option value="100">Sevilla</option>
+    </select>
+    <br><br>
+    <button type="submit">Enviar</button>
+    </form>
     </p>
 </body>
 
