--- a/html/index.html
+++ b/html/index.html
@@ -121,6 +121,11 @@
                         rows="12">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente deserunt minima expedita fugiat praesentium natus corporis cupiditate corrupti nulla, quaerat velit reiciendis. Dolor fugiat enim quae sint, est ab suscipit?</textarea>
                 </td>
             </tr>
+            <tr>
+                <td colspan="2" align="center">
+                    <input type="submit" value="Enviar" class="enviar">
+                </td>
+            </tr>
     </table>
     </form>
 
