--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
         @keyframes bord {
             from {border-bottom: 10px solid red;}
+            50%{ width:200px;}
             to {border-bottom: 10px solid yellow;}
         }
     </style>
