--- a/html/index.html
+++ b/html/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-
+<div class="cebeceras">
     <h1>Soy un h1</h1>
     <h2>Soy un h2</h2>
     <h3>Soy un h3</h3>
     <h4>Soy un h4</h4>
     <h5>Soy un h5</h5>
     <h6>Soy un h6</h6>
-
+</div>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis tempora facilis tenetur odit? Impedit numquam
         aliquid nihil sapiente placeat odit doloremque rerum, corporis expedita, velit cupiditate a, nesciunt ex
         doloribus.</p>
