--- a/html/index.html
+++ b/html/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-<div class="cebeceras">
-    <h1>Soy un h1</h1>
-    <h2>Soy un h2</h2>
-    <h3>Soy un h3</h3>
-    <h4>Soy un h4</h4>
-    <h5>Soy un h5</h5>
-    <h6>Soy un h6</h6>
-</div>
+    <div class="cebeceras">
+        <h1>Soy un h1</h1>
+        <h2>Soy un h2</h2>
+        <h3>Soy un h3</h3>
+        <h4>Soy un h4</h4>
+        <h5>Soy un h5</h5>
+        <h6>Soy un h6</h6>
+    </div>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis tempora facilis tenetur odit? Impedit numquam
         aliquid nihil sapiente placeat odit doloremque rerum, corporis expedita, velit cupiditate a, nesciunt ex
         doloribus.</p>
@@ -51,6 +51,13 @@
     </ol>
     <table class="tabla2">
         <form action="#" method="get">
+            <tr>
+                <td>
+                </td>
+                <td class="celdagears">
+                    <img src="imagen/gear.png" class="gear1"><img src="imagen/gearmini.png" class="gear2">
+                </td>
+            </tr>
             <tr>
                 <td>Nombre:</td>
                 <td><input type="text" name="nombre" placeholder="Escribe tu nombre"></td>
@@ -97,9 +104,10 @@
             <tr>
                 <td>Selecciona nacionalidad:</td>
                 <td>
-                    <label><input type="radio" name="pais" value="espana">España <label></label><input type="radio" name="pais"
-                    value="italia">Italia </label><label><input type="radio" name="pais" value="francia">Francia </label><label><input
-                        type="radio" name="pais" value="alemania">Alemania</label>
+                    <label><input type="radio" name="pais" value="espana">España <label></label><input type="radio"
+                            name="pais" value="italia">Italia </label><label><input type="radio" name="pais"
+                            value="francia">Francia </label><label><input type="radio" name="pais"
+                            value="alemania">Alemania</label>
                 </td>
             </tr>
             <tr>
