--- a/html/index.html
+++ b/html/index.html
@@ -42,6 +42,7 @@
             <td colspan="2">SuperTexto de prueba</td>
         </tr>
     </table>
+    <br>
     <ol>
         <li>Manzana</li>
         <li>Pera</li>
@@ -49,13 +50,15 @@
         <li>Pomelo</li>
         <li>Melocotón</li>
     </ol>
+    <br><br>
     <table class="tabla2">
         <form action="#" method="get">
             <tr>
                 <td>
                 </td>
                 <td class="celdagears">
-                    <img src="imagen/gear.png" class="gear1"><img src="imagen/gearmini.png" class="gear2">
+                    <img src="imagen/gear.png" class="gear1">
+                    <img src="imagen/gearmini.png" class="gear2">
                 </td>
             </tr>
             <tr>
