--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pruebas HTML</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -43,13 +44,13 @@
         </tr>
     </table>
     <br>
-    <ol>
-        <li>Manzana</li>
-        <li>Pera</li>
-        <li>Naranja</li>
-        <li>Pomelo</li>
-        <li>Melocotón</li>
-    </ol>
+        <ol>
+            <li class="lista">Manzana</li>
+            <li class="lista">Pera</li>
+            <li class="lista">Naranja</li>
+            <li class="lista">Pomelo</li>
+            <li class="lista">Melocotón</li>
+        </ol>
     <br><br>
     <table class="tabla2">
         <form action="#" method="get">
