--- a/html/index.html
+++ b/html/index.html
@@ -74,12 +74,11 @@
                 esgrima<input type="checkbox" name="esgrima"><br>
                 futbol<input type="checkbox" name="futbol"><br>
                 petanca<input type="checkbox" name="petanca"><br>
-            </ol></tr>
-        
-
+            </ol>
+        </tr>
         naionalidad: <br>
-        Peruana <input type="radio" name="origen" value="peruano"> <br>
-        colombiana <input type="radio" name="origen" value="colombiano"> <br>
+        Peruana <input type="radio" name="origen" value="Peruana"> <br>
+        colombiana <input type="radio" name="origen" value="colombiana"> <br>
         española <input type="radio" name="origen" value="española"> <br>
         guatemalteca <input type="radio" name="origen" value="guatemalteca"> <br>
         francesa <input type="radio" name="origen" value="francesa"> <br>
@@ -93,14 +92,13 @@
             <option value="08">Barcelona</option>
             <button type="submit"></button>
             <br>
-            <textarea name="" cols="30"
+            <textarea name="comentario" cols="30"
                 rows="10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, error! Dolore cupiditate quis quasi dolorem temporibus, mollitia non modi fugit harum autem nam, officiis tempora? Explicabo veritatis dicta non hic!</textarea>
         </select>
         <button type="submit">enviar
 
         </button>
     </form>
-   
 </body>
 
 </html>
