--- a/daniel.html
+++ b/daniel.html
@@ -1,31 +1,64 @@
+<h1>daniela</h1>
 
-    <h1>daniela</h1>
-   
-<form action="mipagina.es"method="get"
-table border="1" cellspacing="2" cellpading="6">
-<tr>
-    <td>nombre</td>
-    <td><input type="text" name="nombre"></td>
-    </tr>
-    <tr>
-        <td>apellidos</td>
-    <td><input type="text" name="apellidos"></td>
-    <tr>
-<td>CP</td>
-
-
-
-
-
-
-
-
-    </tr>
-
-
-
-
-
-
-
-
+<form action="mipagina.es" method="get">
+    <table border="1" cellspacing="2" cellpading="6">
+        <tr>
+            <td>nombre</td>
+            <td><input type="text" name="nombre"></td>
+        </tr>
+        <tr>
+            <td>apellidos</td>
+            <td><input type="text" name="apellidos"></td>
+        </tr>
+        <tr>
+            <td>CP</td>
+            <td><input type="text" name="CP"></td>
+        </tr>
+    </table>
+    <h1>hola</h1>
+    <h2>adios</h2>
+    <h3>magic</h3>
+    <h4>tarmo</h4>
+    <h5>wizard</h5>
+    <h6>coast</h6>
+    <table border="2" align="center">
+        <tr>
+            <td>nombre</td>
+            <td>adios</td>
+            <td>sayonara</td>
+        </tr>
+    </table>
+    <table border="1">
+        <tr>
+            <td>hola</td>
+            <td>adios</td>
+            <td>sayonara</td>
+        </tr>
+        <tr>
+            <td>baby</td>
+            <td colspan="2">bye</td>
+        </tr>
+        <tr>
+            <td rowspan="2">free</td>
+            <td>gato</td>
+            <td>perro</td>
+        </tr>
+        <tr>
+            <td>calcetines</td>
+            <td>cleo</td>
+        </tr>
+    </table>
+    <textarea name=cols="30" rows="10">"ingenioso hidalgo don quijote"</textarea>
+    <ol>
+        <li>platano</li>
+        <li>manzana</li>
+        <li>pera</li>
+        <li>melon</li>
+    </ol>
+    <cite>el ingenioso hidalgo don quijoter</cite>
+    <article>en un lugar de la mancha, de cuyo nombre no quiero acordarme</article>
+    <input type="submit" value="enviar">
+    <button type="submit">reenviar</button>
+    <button type="reset">reiniciar</button>
+    <marquee behavior="input" direction="futbol">deporte</marquee>
+    
