--- a/html/profe.html
+++ b/html/profe.html
@@ -18,7 +18,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus blanditiis odit quaerat, enim libero rem est
         totam,
         consectetur sapiente quo pariatur ad. Odio consequuntur praesentium maiores vitae ut placeat quaerat.</p>
-
+<br><br>
     <table border="4" rules="all" heigth="180" width="460" frame="box" align="center">
 
         <tr>
@@ -43,7 +43,7 @@
 
     </form>
     <br><br>
-    <h1>frutas</h1>
+    <h1>Nombre de Frutas</h1>
 
     <ol type="number" start="1">
         <li>lima</li>
@@ -60,9 +60,10 @@
         <li>toronja</li>
         <li>platano</li>
     </ul>
+    <br><br>
     <form action="url destino" method="get">
         Nombre :<input type="text"><br>
-        Edad : <input type="number" min="18" max="65"><br>
+        Edad : <input type="number" min="1" max="65"><br>
         Fecha de Nacimiento: <input type="date"><br>
         DNI : <input type="texto" name="DNI"><br>
 
@@ -76,6 +77,7 @@
         esgrima:<input type="checkbox" name="esgrima"><br>
         <br>
         <br>
+
         seleccione población:
 
         <select name="poblacion"> <br>
@@ -86,14 +88,15 @@
             <option value="Lima">Lima</option><br>
 
         </select>
-        <br>
-        Nacionalidad:
+        <br><br><br>
+        Nacionalidad: <br>
 
-        peruana: <input type="radio" name="origen" value="peruana">
-        española: <input type="radio" name="origen" value="española">
-        rusa: <input type="radio" name="origen" value="rusa">
-        Italiana: <input type="radio" name="origen" value="italiana">
-        portuguesa: <input type="radio" name="origen" value="portuguesa">
+        peruana: <input type="radio" name="origen" value="peruana"><br>
+        española: <input type="radio" name="origen" value="española"><br>
+        rusa: <input type="radio" name="origen" value="rusa"><br>
+        Italiana: <input type="radio" name="origen" value="italiana"><br>
+        portuguesa: <input type="radio" name="origen" value="portuguesa"><br>
+
         <br>
         <br>
         sexo:
@@ -114,6 +117,7 @@
 </textarea>
     <br>
     <br>
+
 
 
 
