--- a/index.html
+++ b/index.html
@@ -1,18 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" >
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" ></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div> class="container">
 
-        
+<body>
+    <div class="container-fluid p-5 my-5">
+        <header class="mt-0 p-4 bg-success fixed-top container-fluid">
+            <div class="row">
+                <div class="col p-1">
+                    <a href="index.html">
+                        <img src="imagenes/hello_world_label.svg" class="rounded-pill logo">
+                    </a>
+                </div>
+                <div class="col p-1">
+                    <h1 class="titulo">PAISES DEL MUNDO</h1>
+                    <p class="saludo">La información a tu alcance...</p>
+                </div>
+
+                <div class="col p-3">
+                    <div class="container-fluid p-1 mt-3">
+                        <div>
+                            <div class="saludos">
+                                <h2 class="hola1">Hello!</h2>
+                                <h2 class="hola2">Hola</h2>
+                                <h2 class="hola3">Salut</h2>
+                                <h2 class="hola4">Hallo</h2>
+                                <h2 class="hola5">Ciao</h2>
+                                <h2 class="hola6">привет</h2>
+                                <h2 class="hola7">Namaste</h2>
+                                <h2 class="hola8">السلام</h2>
+                                <h2 class="hola9">Aloha</h2>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <nav class="navbar navbar-expand-sm bg-light rounded mt-4">
+
+                <div class="container-fluid justify-content-center text-uppercase">
+                    <ul class="navbar-nav">
+                        <li class="dropdown">
+                            <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown">
+                                Dropdown button
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Link 1</a></li>
+                                <li><a class="dropdown-item" href="#">Link 2</a></li>
+                                <li><a class="dropdown-item" href="#">Link 3</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown">
+                                Dropdown button
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Link 1</a></li>
+                                <li><a class="dropdown-item" href="#">Link 2</a></li>
+                                <li><a class="dropdown-item" href="#">Link 3</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Datos generales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Datos geográficos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Traducción</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Banderas</a>
+                        </li>
+                    </ul>
+                </div>
+
+
+            </nav>
+        </header>
+        <div class="container-fluid p-1 my-5 mt-5"></div>
     </div>
+
+    <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste accusantium vitae, cumque molestiae eligendi
+        odit nemo quasi excepturi voluptate dolorum velit pariatur corrupti aut nihil, mollitia, tempore ad voluptas
+        maiores.</div>
+
 </body>
+
 </html>
