--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
                                 <li><a class="dropdown-item" href="#">Link 3</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item rounded">
                             <a class="nav-link" href="#">Datos generales</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item rounded">
                             <a class="nav-link" href="#">Datos geográficos</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item rounded">
                             <a class="nav-link" href="#">Traducción</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item rounded">
                             <a class="nav-link" href="#">Banderas</a>
                         </li>
                     </ul>
@@ -89,6 +89,8 @@
         </header>
         <div class="container-fluid p-1 my-5 mt-5"></div>
     </div>
+
+<!-- FIN DE LA CEBECERA!!!!!!!!!!!!!! -->
 
     <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste accusantium vitae, cumque molestiae eligendi
         odit nemo quasi excepturi voluptate dolorum velit pariatur corrupti aut nihil, mollitia, tempore ad voluptas
