--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" >
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" ></script>
 </head>
 <body>
-    <div> class="container">
+  <div class="container">
 
-        
-    </div>
+  </div> 
 </body>
+  
 </html>
