--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -47,21 +48,23 @@
             </div>
             <nav class="navbar navbar-expand-sm bg-light rounded mt-4">
 
-                <div class="container-fluid justify-content-center text-uppercase">
+                <div class="container-fluid justify-content-center">
                     <ul class="navbar-nav">
                         <li class="dropdown">
                             <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown">
-                                Dropdown button
+                                Continente
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Link 1</a></li>
-                                <li><a class="dropdown-item" href="#">Link 2</a></li>
-                                <li><a class="dropdown-item" href="#">Link 3</a></li>
+                                <li><a class="dropdown-item" value="europe" href="#">Europa</a></li>
+                                <li><a class="dropdown-item" value="asia" href="#">Asia</a></li>
+                                <li><a class="dropdown-item" value="africa" href="#">Africa</a></li>
+                                <li><a class="dropdown-item" value="americas" href="#">América</a></li>
+                                <li><a class="dropdown-item" value="oceania" href="#">Oceanía</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown">
-                                Dropdown button
+                                País
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Link 1</a></li>
@@ -69,16 +72,16 @@
                                 <li><a class="dropdown-item" href="#">Link 3</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item rounded">
+                        <li class="nav-item btn btn-success btn-sm p-0 bg-light">
                             <a class="nav-link" href="#">Datos generales</a>
                         </li>
-                        <li class="nav-item rounded">
+                        <li class="nav-item btn btn-success btn-sm p-0 bg-light">
                             <a class="nav-link" href="#">Datos geográficos</a>
                         </li>
-                        <li class="nav-item rounded">
+                        <li class="nav-item btn btn-success btn-sm p-0 bg-light">
                             <a class="nav-link" href="#">Traducción</a>
                         </li>
-                        <li class="nav-item rounded">
+                        <li class="nav-item btn btn-success btn-sm p-0 bg-light">
                             <a class="nav-link" href="#">Banderas</a>
                         </li>
                     </ul>
@@ -90,12 +93,36 @@
         <div class="container-fluid p-1 my-5 mt-5"></div>
     </div>
 
-<!-- FIN DE LA CEBECERA!!!!!!!!!!!!!! -->
+    <!-- FIN DE LA CEBECERA!!!!!!!!!!!!!! -->
 
     <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste accusantium vitae, cumque molestiae eligendi
         odit nemo quasi excepturi voluptate dolorum velit pariatur corrupti aut nihil, mollitia, tempore ad voluptas
         maiores.</div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, accusantium quia. Nam magnam distinctio,
+        officiis eveniet rem fuga, perspiciatis nesciunt mollitia provident minima eligendi error atque dolorum, maiores
+        tempore officia.
+
+    </p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis minus modi qui quos ab, amet error odit.
+        Praesentium, voluptatem numquam? Reprehenderit laudantium rerum necessitatibus nisi aliquam labore quibusdam,
+        enim sed.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tempora minus nihil facilis laboriosam maiores,
+        neque at nulla, ea quod temporibus impedit tempore expedita veniam velit id vitae! Temporibus, omnis!</p>
+    <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste accusantium vitae, cumque molestiae eligendi
+        odit nemo quasi excepturi voluptate dolorum velit pariatur corrupti aut nihil, mollitia, tempore ad voluptas
+        maiores.</div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, accusantium quia. Nam magnam distinctio,
+        officiis eveniet rem fuga, perspiciatis nesciunt mollitia provident minima eligendi error atque dolorum, maiores
+        tempore officia.
+
+    </p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis minus modi qui quos ab, amet error odit.
+        Praesentium, voluptatem numquam? Reprehenderit laudantium rerum necessitatibus nisi aliquam labore quibusdam,
+        enim sed.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tempora minus nihil facilis laboriosam maiores,
+        neque at nulla, ea quod temporibus impedit tempore expedita veniam velit id vitae! Temporibus, omnis!</p>
 
 </body>
+
 
 </html>
