--- a/oscar.html
+++ b/oscar.html
@@ -10,7 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" ></script>
 </head>
 <body>
-  <div class="container">
+  <div class="container mt-3">
+    <h1 class="text-info text-center bg-secondary p-5">PAISES DEL MUNDO</h1>
+
+    
 
   </div> 
 </body>
