--- a/Denis.html
+++ b/Denis.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container mt-3">
-    <header><h1 class="text-center text-info bg-secondary p-5">PAISES DEL MUNDO</h1></header>
+    <header><h1 class="text-center text-white bg-secondary p-5">PAISES DEL MUNDO</h1></header>
   </div> 
 </body>
   
