--- a/html/index.html
+++ b/html/index.html
@@ -1,94 +1,52 @@
 <!DOCTYPE html>
-<html lang="es">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css" />
+  </head>
 
-</head>
+  <body>
+<div class="container">
+    <table border="1" style="background-image: 'C:\Users\fjdia\Documents\gancho febrero 2021 003.jpg';">
 
-<body>
-    <h1>texto h1</h1>
-    <h2>texto h2</h2>
-    <h3>texto h3</h3>
-    <h4>texto h4</h4>
-    <h5>texto h5</h5>
-    <h6>texto h6</h6>
-    <p>dfghdgfh gfd fdghdfgh d hfgh d hdfgh fgdh dfgh dfg hfgd hfgd hfgdh </p>
-
-    <p>hdgfh fdg dfgh dfgh dfg gfd gfdh fgdh dfgh fgh fdgh dfgh gfh dfgh</p>
-
-    <b>negrita</b><br><i>italica</i><br><strong>negrita</strong><br>
-
-
-    <form action="url destino" method="get">
-        Selecciona fecha:<input type="time"><br>
-        color: <input type="color"><br>
-        DNI: <input type="text" value="525658M" pattern="[0-9]{8}[A-Z]" placeholder="escribe tu dni" required ar><br>
-        edad: <input type="number" min="18" max="65">
-    </form>
-
-    codigo postal <input type="text" size="5" maxlength="5">
-
-
-    <form action="mipagina.es" method="get">
-        <table border="1" align="center" cellspacing="20" cellpadding="5">
-
-
-            <tr>
-                <th>dato</th>
-                <th>valor</th>
-            </tr>
-
-
-            <tr>
-                <td>USUARIO</td>
-                <td><input type="text" name="usuario"></input></td>
-            </tr>
-            <tr>
-                <td>CLAVE</td>
-                <td><input type="password" value="visible" name="clave"></td>
-            </tr>
-            <tr>
-                <td colspan="2" align="center"> <button type="submit">ENVIAR</button></td>
-
-            </tr>
-
-        </table>
-    </form>
-    <br><br>
-    <h1>
-        <ul>
-            <li>manzama</li>
-            <li>pera</li>
-            <li>naranja</li>
-            <li>melon</li>
-        </ul>
-
-        <ol>
-            <li>manzama</li>
-            <li>frutas:
-                <ol type="a" start="5">
-                    <li>manzama</li>
-                    <li>pera</li>
-                    <li>naranja</li>
-                    <li>melon</li>
-                </ol>
-            </li>
-            <li>naranja</li>
-            <li>melon</li>
-        </ol>
-    </h1>
-
-    <img 
-    src="https://unjamonaunbuenprecio.com/187-medium_default/jamon-5-jotas-de-sanchez-romero-carvajal.jpg" 
-    title="esto es un jamon">
-
-<a href="https://www.google.es/search?q=jamon" >buscar jamon</a>
-
-<br><br><br><br><br><br><br><br>
-</body>
+        <tr>
+            <td>
+            uno
+            </td>
+            <td>dos</td>
+            <td>tres</td>
+        </tr>
+        <tr>
+            <td>
+            uno
+            </td>
+            <td>dos</td>
+            <td>tres</td>
+        </tr>
+        <tr>
+            <td>
+            uno
+            </td>
+            <td>dos</td>
+            <td>tres</td>
+        </tr>
+    </table>
+    <h1 id="h12" class="text-danger">soy un h1</h1>
+    <h1 id="h11" class="text-warning">soy un h1</h1>
+    <h1 id="h13">soy un h1</h1>
+    <h2>soy un h2</h2>
+    <h2>soy un h2</h2>
+    <h2>soy un h2</h2>
+    <div id="div1">
+      hola
+   
+    <h3 class="rojo">soy un h3</h3>
+      <h3>soy un h3</h3>
+      <h3 class="rojo">soy un h3</h3>
+    </div>
+  </body>
 
 </html>
