--- a/oscar.html
+++ b/oscar.html
@@ -12,14 +12,17 @@
 </head>
 
 <body>
-    <header class="container mt-3"></header>
-    <h1 class="text-white text-center bg-secondary p-5">PAISES DEL MUNDO</h1>
+    <header class="container mt-3">
+        <h1 class="text-white text-center bg-secondary p-5">PAISES DEL MUNDO</h1>
+        <img src="imagenes/chinchetas recortadas (1).jpg" width="100px" height="100px">
+    </header>
     <nav class="text-center">
         <button type="button" class="btn btn-primary">Datos Generales</button>
         <button type="button" class="btn btn-primary">Datos Geográficos</button>
         <button type="button" class="btn btn-primary">Traducción</button>
         <button type="button" class="btn btn-primary">Banderas</button>
     </nav>
+
 </body>
 
 </html>
