--- a/Denis.html
+++ b/Denis.html
@@ -13,9 +13,13 @@
 
 <body>
   <header class="container mt-3">
-  <h1 class="text-center text-white bg-secondary p-5">PAISES DEL MUNDO</h1>
-  <img src="imagenes.jpg/chinchetas recortadas (1).jpg">
-</header>
+    <div class="row">
+      <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"></div>
+      <div class="col-sm-10">
+        <h1 class="text-center text-white bg-secondary p-5">PAISES DEL MUNDO</h1>
+      </div>1
+    </div>
+  </header>
   <nav class="text-center">
     <button type="button" class="btn btn-primary">Datos Generales</button>
     <button type="button" class="btn btn-primary">Datos Geográficos</button>
