--- a/oscar.html
+++ b/oscar.html
@@ -13,8 +13,12 @@
 
 <body>
     <header class="container mt-3">
-        <h1 class="text-white text-center bg-secondary p-5">PAISES DEL MUNDO</h1>
-        <img src="imagenes/chinchetas recortadas (1).jpg" width="100px" height="100px">
+        <div class="row">
+            <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"></div>
+            <div class="col-sm-10">
+                <h1 class="text-white text-center bg-secondary p-5">PAISES DEL MUNDO</h1>
+            </div>
+        </div>
     </header>
     <nav class="text-center">
         <button type="button" class="btn btn-primary">Datos Generales</button>
