--- a/oscar.html
+++ b/oscar.html
@@ -26,6 +26,20 @@
         <button type="button" class="btn btn-primary">Traducción</button>
         <button type="button" class="btn btn-primary">Banderas</button>
     </nav>
+    <form action="" method="post">
+        Selecciona un continente <select name="continente" class="form-select form-select-sm">
+            <option value="0">Elige un continente</option>
+            <option value="africa">Africa</option>
+            <option value="americas">America</option>
+            <option value="asia">Asia</option>
+            <option value="europa">Europa</option>
+            <option value="oceania">Oceania</option>
+        </select>
+        <br>
+        <select name="pais" class="form-select form-select-sm">
+            <option value="0">Elige un país</option>
+        </select>
+    </form>
 
 </body>
 
