--- a/datos.html
+++ b/datos.html
@@ -107,10 +107,10 @@
                         <input type="text" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="pwd">Poblacion:</label>
-                        <input type="number" class="form-control">
+                        <label for="number">Poblacion:</label>
+                        <input type="texto" class="form-control">
                         <div class="form-group">
-                            <label for="pwd">Idioma:</label>
+                            <label for="text">Idioma:</label>
                             <input type="text" class="form-control">
                         </div>
                     </div>
@@ -121,20 +121,20 @@
             <div class="p-5">
 
                 <div class="form-group">
-                    <label for="pwd">Moneda:</label>
+                    <label for="text">Moneda:</label>
                     <input type="text" class="form-control">
 
-                    <ol>Simbolo <label for="pwd">Moneda:</label>
+                    <ol>Simbolo <label for="texto">Moneda:</label>
                         <input type="text" class="form-control">
                     </ol>
                 </div>
                 <ol></ol>
                 <div class="form-group">
-                    <label for="pwd">Forma de Gobierno:</label>
+                    <label for="text">Forma de Gobierno:</label>
                     <input type="text" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="pwd">Religion:</label>
+                    <label for="text">Religion:</label>
                     <input type="text" class="form-control">
                 </div>
             </div>
@@ -143,6 +143,7 @@
     </div>
 
     </div>
+
 </body>
 
 
