--- a/index.html
+++ b/index.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" >
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" ></script>
-</head>
-<body>
-  <div class="container">
 
-  </div> 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
+<body>
+  <main>
+    <div class="container-fluid border">
+        <header>
+            <div class="row border">
+                <div class="col-sm-1 text-black border"><img src="images/world.png"  width="150px" ></div>
+                <div class="col-sm-11 p-3 text-black border mx-auto" ><h1 class="text-center bg-success text-warning">PAISES DEL MUNDO</h1></div>
+            </div>
+            <nav class="mt-3">
+                <div class="container-fluid">
+                  <ul class="nav nav-tabs nav-justified">
+                    <li class="nav-item">
+                      <a class="nav-link fw-bold active" id="generales" href="#">DATOS GENERALES</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link fw-bold" id="georgaficos" href="#">DATOS GEOGRÁFICOS</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link fw-bold"id="tarducir" href="#">TRADUCCIÓN</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link fw-bold" id="bandera" href="#">BANDERAS</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+        </header>
+        <section>
+
+            <div class="tab-pane fade show" id="generales">
 </body>
-  
+
 </html>
