--- a/index.html
+++ b/index.html
@@ -50,13 +50,10 @@
 
                 <div class="container-fluid justify-content-center">
                     <ul class="navbar-nav">
-                        <li class="dropdown">
-                            <button type="button" class="btn btn-success bg-success dropdown-toggle" data-bs-toggle="dropdown">
-                                Continente
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li class="badge bg-success">
-                                    <button type="button">
+                        <li class="botoncontinentes">
+                            <h2><span class="badge bg-success">                            
+                                <button type="button" class="btn btn-success disabled">
+                                    Continente:  <button type="button" class="btn btn-success">
                                         <select name="continente" class="opcionescontinentescasilla p-0">
                                             <option class="opcionescontinentes" value="null">Selecciona Continente</option>
                                             <option class="opcionescontinentes" value="asia">Asia</option>
@@ -66,26 +63,24 @@
                                             <option class="opcionescontinentes" value="europe">Europa</option>
                                         </select>
                                     </button>
-                                </li>
-                            </ul>
+                                </button>
+                            </span> 
+                            </h2>                           
                         </li>
-
-                        <li>
-                            <button type="button" class="btn btn-success">
-                                <select name="pais" class="opcionescontinentescasilla">
-                                    <option class="opcionespaises" value="null">Selecciona País</option>
-                                    <option class="opcionespaises" value="asia">Asia</option>
-                                    <option class="opcionespaises" value="africa">Africa</option>
-                                    <option class="opcionespaises" value="americas">América</option>
-                                    <option class="opcionespaises" value="oceania">Oceanía</option>
-                                    <option class="opcionespaises" value="europe">Europa</option>
-                                </select>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Link 1</a></li>
-                                <li><a class="dropdown-item" href="#">Link 2</a></li>
-                                <li><a class="dropdown-item" href="#">Link 3</a></li>
-                            </ul>
+                        <li class="botoncontinentes">
+                            <h2><span class="badge bg-success">                            
+                                <button type="button" class="btn btn-success disabled">
+                                    País:  <button type="button" class="btn btn-success">
+                                        <select name="pais" class="opcionescontinentescasilla p-0">
+                                            <option class="opcionespaises" value="null">Selecciona País</option>
+                                            <option class="opcionespaises" value="espana">España</option>
+                                            <option class="opcionespaises" value="francia">Francia</option>
+                                            <option class="opcionespaises" value="xxxx">xxxx</option>
+                                        </select>
+                                    </button>
+                                </button>
+                            </span> 
+                            </h2>                           
                         </li>
                         <li class="nav-item btn btn-success btn-sm p-0 bg-light">
                             <a class="nav-link" href="#">Datos generales</a>
