--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
                 <div class="container-fluid justify-content-center">
                     <ul class="navbar-nav">
-                        <li class="botoncontinentes">
+                        <li>
                             <h2><span class="badge bg-success">                            
                                 <button type="button" class="btn btn-success disabled">
-                                    Continente:  <button type="button" class="btn btn-success">
+                                    Continente:  <button type="button" class="btn btn-success p-0">
                                         <select name="continente" class="opcionescontinentescasilla p-0">
                                             <option class="opcionescontinentes" value="null">Selecciona Continente</option>
                                             <option class="opcionescontinentes" value="asia">Asia</option>
@@ -67,10 +67,10 @@
                             </span> 
                             </h2>                           
                         </li>
-                        <li class="botoncontinentes">
+                        <li>
                             <h2><span class="badge bg-success">                            
                                 <button type="button" class="btn btn-success disabled">
-                                    País:  <button type="button" class="btn btn-success">
+                                    País:  <button type="button" class="btn btn-success p-0">
                                         <select name="pais" class="opcionescontinentescasilla p-0">
                                             <option class="opcionespaises" value="null">Selecciona País</option>
                                             <option class="opcionespaises" value="espana">España</option>
